--- a/mesn-fe/package.json
+++ b/mesn-fe/package.json
@@ -18,9 +18,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "axios": "^0.21.1",
     "sirv-cli": "^1.0.0",
     "smelte": "^1.1.5",
-    "svelte-navigator": "^3.1.5"
+    "svelte-navigator": "^3.1.5",
+    "svelte-waypoint": "^0.1.4"
   }
 }
